--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,111 @@
-/* You can add global styles to this file, and also import other style files */
+@import url('https://fonts.googleapis.com/css2?family=Cormorant+Garamond:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500;1,600;1,700&family=Hind+Vadodara:wght@300;400;500;600;700&family=Mulish:ital,wght@0,200..1000;1,200..1000&display=swap');
+@import 'variables';
+
+$font-maior : 'Hind Vadodara';
+$font-meio : 'Cormorant Garamond';
+$font-menor : 'Mulish';
+
+* {
+    font-family: $font-menor;
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
+html {
+    scroll-behavior: smooth;
+}
+
+html,
+body {
+    width: 100%;
+
+}
+
+body:has(app-menu) {
+    background: $color-bg;
+}
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h5 {
+    font-family: $font-maior;
+}
+
+.box-field {
+    display: flex;
+    flex-direction: column;
+    gap: 4px;
+
+    .field {
+        position: relative;
+
+        input,
+        textarea {
+            width: 100%;
+            /*border: 2px  var(--color-9) solid;*/
+            border-radius: 7px;
+            outline: none;
+            padding: 10px 15px;
+            background: white;
+            color: black;
+            // font-family: 'Montserrat', 'Poppins', sans-serif;
+            transition: 0.2s;
+            border: 0;
+            box-shadow: rgba(0, 0, 0, 0.12) 0px 1px 1px 0px, rgba(61, 59, 53, 0.16) 0px 0px 0px 1px, rgba(61, 59, 53, 0.08) 0px 2px 5px 0px;
+
+            /*box-shadow: 0px 0px 1px rgba(0, 0, 0, 0.04), 0px 0px 3px rgba(0, 0, 0, 0.25);*/
+            &:hover {
+                box-shadow: 0 -1px 0 rgba(0, 0, 0, 0.04), 0 2px 4px rgba(0, 0, 0, 0.25);
+            }
+
+            &:focus {
+                outline: none;
+                box-shadow: 0 -1px 0 rgba(0, 0, 0, 0.04), 0 2px 4px rgba(0, 0, 0, 0.25),
+                    0 0 0 3px #c8dafc;
+            }
+
+            // &.invalid{
+            //     box-shadow: rgba(255, 99, 71, 0.12) 0px 1px 1px 0px, rgba(61, 59, 53, 0.16) 0px 0px 0px 1px, rgba(255, 99, 71, 0.08) 0px 2px 5px 0px;
+            // }
+
+            &.invalid:focus {
+                outline: none;
+                box-shadow: 0 -1px 0 rgba(0, 0, 0, 0.04), 0 2px 4px rgba(0, 0, 0, 0.25),
+                    0 0 0 3px #fcc8c8;
+            }
+
+        }
+
+        textarea {
+            resize: none;
+            height: 120px;
+        }
+
+        label {
+            position: absolute;
+            top: 50%;
+            left: 10px;
+            transform: translateY(-50%);
+            transition: 0.2s;
+            background: white;
+            border-radius: 4px;
+            padding: 0px 5px;
+            font-size: 14px;
+            //font-size: 1.8rem;
+            opacity: 1;
+            color: black;
+        }
+
+        input:hover~label,
+        input:focus~label,
+        input:valid~label {
+
+            top: 0;
+            opacity: 1;
+        }
+    }
+}
