--- a/src/app/pages/menu/menu.component.scss
+++ b/src/app/pages/menu/menu.component.scss
@@ -683,6 +683,10 @@ app-sidebar {
             .side-left {
                 transform: translateX(70%);
             }
+
+            .side-right img{
+                width: 500px;
+            }
         }
     }
 
