--- a/src/app/pages/menu/menu.component.html
+++ b/src/app/pages/menu/menu.component.html
@@ -50,7 +50,7 @@
 </app-sidebar>
 <app-sidebar #info [side]="'right'">
     <section style="padding: 15px;">
-        <iframe src="http://localhost:4000/information.html" frameborder="0" style="height: 100%;"></iframe>
+        <iframe [src]="API_MAIN + '/information.html'" frameborder="0" style="height: 100%;"></iframe>
     </section>
 </app-sidebar>
 
@@ -71,7 +71,7 @@
 <header>
     <div id="establishment" class="establishment">
         <div class="icon">
-            <img [src]="'http://localhost:4000/' + establishment?.icone" alt="">
+            <img [src]="API_MAIN + '/' + establishment?.icone" alt="">
         </div>
         <div class="information">
             <div class="name">
