--- a/src/app/pages/menu/menu.component.html
+++ b/src/app/pages/menu/menu.component.html
@@ -93,10 +93,10 @@
             </ul>
         </div>
     </div>
-    <div class="info" (click)="info.active = true">
+    <!-- <div class="info" (click)="info.active = true">
         <i class="fi fi-rr-exclamation"></i>
         <h2>Informações</h2>
-    </div>
+    </div> -->
 </header>
 <section class="box top" id="top">
     <div style="display: flex;justify-content: space-between;gap: 30px;align-items: center;">
