--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,9 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Cormorant+Garamond:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500;1,600;1,700&family=Hind+Vadodara:wght@300;400;500;600;700&family=Mulish:ital,wght@0,200..1000;1,200..1000&display=swap');
-@import 'variables';
 
-$font-maior : 'Hind Vadodara';
-$font-meio : 'Cormorant Garamond';
-$font-menor : 'Mulish';
+
+@import 'variables';
 
 * {
     font-family: $font-menor;
@@ -19,10 +17,9 @@ html {
 html,
 body {
     width: 100%;
-
 }
 
-body:has(app-menu) {
+body {
     background: $color-bg;
 }
 
@@ -39,6 +36,7 @@ h5 {
     display: flex;
     flex-direction: column;
     gap: 4px;
+    flex-grow: 1;
 
     .field {
         position: relative;
@@ -55,22 +53,27 @@ h5 {
             // font-family: 'Montserrat', 'Poppins', sans-serif;
             transition: 0.2s;
             border: 0;
-            box-shadow: rgba(0, 0, 0, 0.12) 0px 1px 1px 0px, rgba(61, 59, 53, 0.16) 0px 0px 0px 1px, rgba(61, 59, 53, 0.08) 0px 2px 5px 0px;
+            //box-shadow: rgba(0, 0, 0, 0.12) 0px 1px 1px 0px, rgba(61, 59, 53, 0.16) 0px 0px 0px 1px, rgba(61, 59, 53, 0.08) 0px 2px 5px 0px;
 
             /*box-shadow: 0px 0px 1px rgba(0, 0, 0, 0.04), 0px 0px 3px rgba(0, 0, 0, 0.25);*/
-            &:hover {
-                box-shadow: 0 -1px 0 rgba(0, 0, 0, 0.04), 0 2px 4px rgba(0, 0, 0, 0.25);
-            }
-
-            &:focus {
-                outline: none;
-                box-shadow: 0 -1px 0 rgba(0, 0, 0, 0.04), 0 2px 4px rgba(0, 0, 0, 0.25),
-                    0 0 0 3px #c8dafc;
-            }
-
-            // &.invalid{
-            //     box-shadow: rgba(255, 99, 71, 0.12) 0px 1px 1px 0px, rgba(61, 59, 53, 0.16) 0px 0px 0px 1px, rgba(255, 99, 71, 0.08) 0px 2px 5px 0px;
+            // &:hover {
+            //     box-shadow: 0 -1px 0 rgba(0, 0, 0, 0.04), 0 2px 4px rgba(0, 0, 0, 0.25);
             // }
+            border: 2px solid $gray-10;
+
+
+
+            &:focus,
+            &:hover {
+
+                //box-shadow: 0 -1px 0 rgba(0, 0, 0, 0.04), 0 2px 4px rgba(0, 0, 0, 0.25),
+                border-color: $color-primary;
+            }
+
+            &.invalid {
+                //box-shadow: rgba(255, 99, 71, 0.12) 0px 1px 1px 0px, rgba(61, 59, 53, 0.16) 0px 0px 0px 1px, rgba(255, 99, 71, 0.08) 0px 2px 5px 0px;
+                border-color: $color-primary;
+            }
 
             &.invalid:focus {
                 outline: none;
@@ -103,9 +106,39 @@ h5 {
         input:hover~label,
         input:focus~label,
         input:valid~label {
-
             top: 0;
             opacity: 1;
+            color: $color-primary;
+        }
+
+        textarea~label {
+            top: 0;
+            opacity: 1;
+            color: $color-primary;
         }
     }
+}
+
+.btn, .btn-darken {
+    padding: 15px 25px;
+    border: 0;
+    cursor: pointer;
+    display: flex;
+    align-items: center;
+    gap: 10px;
+    border-radius: 7px;
+    cursor: pointer;
+    background: color-mix(in srgb, $color-primary 70%, transparent);
+    color: white;
+    box-shadow: 1px 2px 10px color-mix(in srgb, $color-primary 50%, transparent);
+    transition: 0.2s;
+
+    &:not(&.not-span):hover {
+        transform: scale(0.95, 0.95);
+    }
+}
+
+.btn-darken{
+    background: color-mix(in srgb, $color-third 70%, transparent);
+    box-shadow: 1px 2px 10px color-mix(in srgb, $color-third 50%, transparent);
 }
