--- a/src/app/pages/cart/cart.component.scss
+++ b/src/app/pages/cart/cart.component.scss
@@ -39,7 +39,8 @@
     padding: 5px;
     border-radius: 7px;
     gap: 12px;
-    border: 1px solid rgba(0 0 0 / 17%) // overflow: auto;
+    border: 1px solid rgba(0 0 0 / 17%);
+    background: white;
 }
 
 @media screen and (max-width: 680px) {
