--- a/src/app/pages/menu/menu.component.scss
+++ b/src/app/pages/menu/menu.component.scss
@@ -194,7 +194,8 @@ header {
     position: sticky;
     top: 0;
     z-index: 1;
-    backdrop-filter: blur(20px);
+    backdrop-filter: blur(10px);
+    // background: $color-bg;
 }
 
 .box {
@@ -239,6 +240,7 @@ header {
         span {
             transition: 0.2s;
             padding: 10px 18px;
+            text-wrap: nowrap;
             border-radius: 20px;
             border: 1px solid $color-primary;
             color: rgba(0 0 0 / 70%);
@@ -262,13 +264,14 @@ header {
         gap: 16px;
         padding: 12px 24px;
         border-radius: 26px;
-        background: color-mix(in srgb, $color-primary 70%, transparent);
+        background: color-mix(in srgb, $color-primary 100%, transparent);
         color: color-mix(in srgb, black 0%, white);
         font-weight: 700;
         font-size: 22px;
         cursor: pointer;
         box-shadow: 2px 2px 7px color-mix(in srgb, black 30%, color-mix(in srgb, $color-primary, transparent 80%));
         transition: 0.2s;
+        position: relative;
 
         &:hover {
             transform: translateY(-10%);
@@ -280,6 +283,20 @@ header {
             flex-direction: column;
             align-items: center;
             justify-content: center;
+        }
+
+        .counter {
+            top: -5px;
+            right: 5px;
+            display: none;
+            position: absolute;
+            padding: 0px 5px;
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
+            font-size: 15px;
+            background: color-mix(in srgb, $color-primary, rgba(0 0 0 / 17%));
+            border-radius: 20px;
         }
     }
 }
@@ -347,6 +364,12 @@ header {
 
     &:hover {
         transform: scale(1.02);
+    }
+
+    &.not-available{
+        opacity: 0.5;
+        pointer-events: none;
+        filter: grayscale(1);
     }
 }
 
@@ -470,7 +493,7 @@ header {
             button {
                 flex-grow: 1;
                 border: 0;
-                background: color-mix(in srgb, $color-primary 30%, transparent);
+                background: color-mix(in srgb, $color-primary 70%, transparent);
                 color: color-mix(in srgb, black 70%, $color-primary);
                 padding: 8px 16px;
                 border-radius: 7px;
@@ -710,6 +733,10 @@ app-sidebar {
 
     .box .icon-cart .text {
         display: none;
+    }
+
+    .box .icon-cart .counter {
+        display: flex;
     }
 
     header {
