--- a/src/app/shared/comp/modal/modal.component.scss
+++ b/src/app/shared/comp/modal/modal.component.scss
@@ -48,7 +48,7 @@
     top: 0;
     left: 0;
     transition: 0.5s;
-    backdrop-filter: blur(1px);
+    // backdrop-filter: blur(1px);
     height: 100%;
     background: rgba(0, 0, 0, 0.5);
     z-index: 1;
