--- a/src/app/shared/comp/sidebar/sidebar.component.scss
+++ b/src/app/shared/comp/sidebar/sidebar.component.scss
@@ -36,14 +36,14 @@
     width: 100%;
     top: 0;
     transition: 0.2s;
-    backdrop-filter: blur(5px);
+    // backdrop-filter: blur(5px);
     height: 100%;
     background: rgba(0, 0, 0, 0.5);
     z-index: 3;
     transition: 0.2s ease-out;
   
     &:hover{
-      backdrop-filter: blur(1.5px);
+      // backdrop-filter: blur(1.5px);
     }
   }
   
